--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="blankScore">00</string>
     <string name="subtotal">Subtotal:0</string>
     <string name="total">Total:0</string>
+    <string name="shareScoreCard">Share Score Card</string>
+    <string name="nextActivity">Score Card</string>
 </resources>
