Removed save button in FragmentScoreCard and refactored code

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,8 @@
     <string name="subtotal">Subtotal:0</string>
     <string name="total">Total:0</string>
     <string name="shareScoreCard">Share Score Card</string>
-    <string name="saveScoreCard">Save Score Card</string>
     <string name="nextActivity">Score Card</string>
+    <string name="redoOption">Redo</string>
+    <string name="detailOption">Details</string>
+    <string name="showOption">Show Target</string>
 </resources>
