--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,10 +2,11 @@
     <string name="app_name">Titan Archers Scoring</string>
 
     <string name="blankScore">00</string>
-    <string name="subtotal">Subtotal:0</string>
-    <string name="total">Total:0</string>
+<!--    <string name="subtotal">Subtotal:0</string>
+    <string name="total">Total:0</string> -->
     <string name="shareScoreCard">Share Score Card</string>
-    <string name="nextActivity">Score Card</string>
+    <string name="shareGroup">Share Arrow Groups</string>
+<!--    <string name="nextActivity">Score Card</string> -->
     <string name="redoOption">Redo</string>
     <string name="detailOption">Details</string>
     <string name="showOption">Show Target</string>
